@@ -1,3 +1,9 @@
+2015-01-24 Ben Shi <powerstudio1st AT 163 DOT com>
+	* src/SDCCast.c:
+	  Fix bug #2239.
+	* support/regression/test/bug-2239.c:
+	  Add a new test for bug #2239.
+
 2015-01-20 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCmain.c,
